just to save the results of gans

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -13,12 +13,35 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'\\nI realized I am leaning towards this approach https://doi.org/10.1016/j.trc.2020.102635\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "I realized I am leaning towards this approach https://doi.org/10.1016/j.trc.2020.102635\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  359\n",
-      "Available :  3491\n",
+      "Using :  361\n",
+      "Available :  3475\n",
       "True\n",
+      "Cannot import zuko. Continuing without prior\n",
       "No module named 'pycapmd'\n",
       "Cannot import simulator\n"
      ]
@@ -40,7 +63,7 @@
     "from cell_dataset import CellGraphDataset\n",
     "from cell_model import GraphEvolution\n",
     "from cell_utils import GraphingLoss\n",
-    "from cell_training import train, test, run_single, run_single_recursive, evaluate\n",
+    "from cell_training import train, test_single, test_recursive, run_single, run_single_recursive\n",
     "\n",
     "import os, psutil\n",
     "process = psutil.Process(os.getpid())\n",
@@ -53,7 +76,10 @@
     "from adamp import AdamP\n",
     "\n",
     "sys.path.append('/home/nstillman/1_sbi_activematter/cpp_model')\n",
-    "import allium"
+    "try :\n",
+    "    import allium\n",
+    "except :\n",
+    "    print(\"Could not import allium\")"
    ]
   },
   {
@@ -67,47 +93,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training data length :  5\n",
-      "Test data length :  1\n",
-      "Validation data length :  50\n"
-     ]
-    }
-   ],
-   "source": [
-    "#path = \"data/\" #local\n",
-    "path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
-    "\n",
-    "data_train = CellGraphDataset(root=path + 'train', max_size=5, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
-    "print(\"Training data length : \", data_train.len())\n",
-    "\n",
-    "data_test = CellGraphDataset(root=path + 'test', max_size=1, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
-    "print(\"Test data length : \", data_test.len())\n",
-    " \n",
-    "data_val = CellGraphDataset(root=path + 'valid', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
-    "print(\"Validation data length : \", data_val.len())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "override = True #make this true to always use the same ones\n",
+    "load_all = True\n",
     "\n",
-    "if override :\n",
-    "    data_train.save_or_load_if_exists(\"train_paths.pkl\")\n",
-    "    data_test.save_or_load_if_exists(\"test_paths.pkl\")\n",
-    "    data_val.save_or_load_if_exists(\"val_paths.pkl\")\n",
+    "if load_all : \n",
+    "    if os.path.exists(\"data/training.pkl\") :\n",
+    "        with open(\"data/training.pkl\", \"rb\") as f:\n",
+    "            data_train = pickle.load(f)\n",
+    "    if os.path.exists(\"data/testing.pkl\") :\n",
+    "        with open(\"data/testing.pkl\", \"rb\") as f:\n",
+    "            data_test = pickle.load(f)\n",
     "else :\n",
-    "    torch.autograd.set_detect_anomaly(True)\n"
+    "    #path = \"data/\" #local\n",
+    "    path = \"/scratch/users/nstillman/data-cpp/\" #remote\n",
+    "\n",
+    "    data_train = CellGraphDataset(root=path + 'train', max_size=1000, rdts=True, inmemory=True, bg_load=True, wrap=True, T_limit=16)\n",
+    "    print(\"Training data length : \", data_train.len())\n",
+    "\n",
+    "    data_test = CellGraphDataset(root=path + 'test', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=16)\n",
+    "    print(\"Test data length : \", data_test.len())\n",
+    "    \n",
+    "    data_val = CellGraphDataset(root=path + 'valid', max_size=50, inmemory=True, bg_load=True, wrap=True, T_limit=8)\n",
+    "    print(\"Validation data length : \", data_val.len())\n",
+    "\n",
+    "    override = True #make this true to always use the same ones\n",
+    "\n",
+    "    if override :\n",
+    "        data_train.save_or_load_if_exists(\"train_paths.pkl\")\n",
+    "        data_test.save_or_load_if_exists(\"test_paths.pkl\")\n",
+    "        data_val.save_or_load_if_exists(\"val_paths.pkl\")\n",
+    "    else :\n",
+    "        torch.autograd.set_detect_anomaly(True)"
    ]
   },
   {
@@ -163,27 +182,31 @@
    "outputs": [],
    "source": [
     "def start(model : GraphEvolution, optimizer : torch.optim.Optimizer, scheduler  : torch.optim.lr_scheduler._LRScheduler,\\\n",
-    "          data_train : CellGraphDataset, data_test : CellGraphDataset, device : torch.device, epoch : int, offset : int, save=0):\n",
+    "          data_train : CellGraphDataset, data_test : CellGraphDataset, device : torch.device, epoch : int, offset : int, save=0, save_datasets=True):\n",
     "    for e in range(offset, offset + epoch):\n",
     "        \n",
-    "        recursive = e > 70\n",
+    "        recursive = True\n",
     "\n",
     "        model = train(model, optimizer, scheduler, data_train, device, e, process, max_epoch=offset+epoch, recursive=recursive)\n",
     "\n",
-    "        test_loss_r = test(model, data_test, device, method=run_single_recursive, duration=8)\n",
-    "        test_loss_s = test(model, data_test, device, method=run_single, duration=8)\n",
+    "        test_loss_s = test_single(model, data_test, device, duration=8)\n",
+    "        test_loss_r = test_recursive(model, data_test, device, duration=8)\n",
     "        \n",
-    "        test_loss = test_loss_r + test_loss_s\n",
+    "        if(e == 0 and save_datasets) :\n",
+    "            with open(\"data/training.pkl\", 'wb') as f:\n",
+    "                pickle.dump(data_train, f)\n",
+    "            with open(\"data/testing.pkl\", 'wb') as f:\n",
+    "                pickle.dump(data_test, f)\n",
+    "            print(\"Saved datasets\")\n",
     "        \n",
     "        if (e%10 == 0) :\n",
-    "            print(\"Epoch : \", e, \"Test loss : \", test_loss, \"                                                         \")\n",
+    "            print(\"Epoch : \", e, \"Test loss : \", test_loss_s, \"Test loss recursive : \", test_loss_r)\n",
     "        \n",
     "        losses.append(test_loss_r)\n",
     "        losses.append(test_loss_s)\n",
     "        \n",
     "        if (save and (e%save == 0 or e == epoch-1)) :\n",
-    "            with open(model_path + str(e) + \".pkl\", 'wb') as f:\n",
-    "                pickle.dump(model.cpu(), f)\n",
+    "            torch.save(model.state_dict(), model_path + str(e) + \".pt\")\n",
     "            with open(loss_path + str(e) + \".pkl\", 'wb') as f:\n",
     "                pickle.dump(losses, f)"
    ]
@@ -196,28 +219,86 @@
    "source": [
     "load = True\n",
     "\n",
-    "epoch_to_load = 0\n",
+    "epoch_to_load = 225\n",
     "\n",
-    "if (load and exists(model_path)) :\n",
-    "    with open(model_path + str(epoch_to_load) + \".pkl\", 'rb') as f:\n",
-    "        model = pickle.load(f)\n",
+    "model = GraphEvolution(in_channels=9, out_channels=4, hidden_channels=32, dropout=0.01, edge_dim=2, messages=5)\n",
+    "\n",
+    "if exists(model_path + str(epoch_to_load) + \".pt\") and load :\n",
     "    with open(loss_path + str(epoch_to_load) + \".pkl\", 'rb') as f:\n",
     "        losses = pickle.load(f)\n",
-    "else :\n",
-    "    model = GraphEvolution(in_channels=9, out_channels=8, hidden_channels=64, dropout=0.05, edge_dim=2, messages=5)\n",
-    "    losses = []\n",
-    "    \n",
-    "assert isinstance(model, GraphEvolution)"
+    "    model.load_state_dict(torch.load(model_path + str(epoch_to_load) + \".pt\"))\n",
+    "    print(\"Loaded model\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using :  3436\n",
+      "Losses :  0\n",
+      "Model :  GraphEvolution(\n",
+      "  (transformer_decoder): TransformerDecoder(\n",
+      "    (layers): ModuleList(\n",
+      "      (0): TransformerDecoderLayer(\n",
+      "        (self_attn): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
+      "        )\n",
+      "        (multihead_attn): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
+      "        )\n",
+      "        (linear1): Linear(in_features=32, out_features=128, bias=True)\n",
+      "        (dropout): Dropout(p=0.01, inplace=False)\n",
+      "        (linear2): Linear(in_features=128, out_features=32, bias=True)\n",
+      "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "        (norm3): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "        (dropout1): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout2): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout3): Dropout(p=0.01, inplace=False)\n",
+      "      )\n",
+      "      (1): TransformerDecoderLayer(\n",
+      "        (self_attn): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
+      "        )\n",
+      "        (multihead_attn): MultiheadAttention(\n",
+      "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
+      "        )\n",
+      "        (linear1): Linear(in_features=32, out_features=128, bias=True)\n",
+      "        (dropout): Dropout(p=0.01, inplace=False)\n",
+      "        (linear2): Linear(in_features=128, out_features=32, bias=True)\n",
+      "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "        (norm3): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
+      "        (dropout1): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout2): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout3): Dropout(p=0.01, inplace=False)\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      "  (decoder_resize): Conv1d(32, 4, kernel_size=(1,), stride=(1,))\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Using : \", process.memory_info().rss // 1000000)  # in megabytes\n",
+    "print(\"Losses : \", len(losses) // 2)\n",
+    "print(\"Model : \", model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#might want to investigate AdamP \n",
-    "optimizer = AdamP(model.parameters(), lr=2e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
+    "optimizer = AdamP(model.parameters(), lr=5e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
     "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-12)"
    ]
   },
@@ -230,36 +311,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current probability of recursive training :  0\n",
-      "Current loss :  -0.6294481158256531  ...  145 / 500 . Current memory usage :  2816  MB, loaded  312     \r"
+      "Current probability of recursive training :  tensor(0.1080)\n",
+      "Epoch :  0 Test loss :  0.07798135828226804 Test loss recursive :  1.260199143886566 \n",
+      "Current loss : 1.08, ... 278, / 1000, Current memory usage : 4774 MB, loaded 1000    \r"
      ]
     }
    ],
    "source": [
-    "epochs = 620\n",
+    "epochs = 630\n",
     "grapher = GraphingLoss(losses)\n",
-    "scheduler.step(len(losses))\n",
+    "scheduler.step(len(losses) // 2)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "try :\n",
     "    grapher.gstart(20)\n",
     "    start(model, optimizer, scheduler, data_train, data_test, device, \\\n",
-    "          epochs, len(losses), save=20)\n",
+    "          epochs, len(losses) // 2, save=10, save_datasets=False)\n",
     "finally :\n",
     "    grapher.gstop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "mean, std, sim_mean, sim_std = evaluate(model, data_val, device, method=run_single_recursive, duration=16)\n",
-    "print(\"Mean : \", mean, \"Std : \", std, \"Sim mean : \", sim_mean, \"Sim std : \", sim_std)"
    ]
   }
  ],
@@ -280,11 +348,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c671acb9d3cf87d64ea7277f1f1b7981cda534cb27553b34f82b93fda7c98f17"
-   }
   }
  },
  "nbformat": 4,
