results for each part

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  291\n",
+      "Using :  290\n",
       "Available :  3271\n",
       "True\n",
       "Could not import allium\n"
@@ -62,9 +62,6 @@
     "import sys\n",
     "import os\n",
     "from genericpath import exists\n",
-    "\n",
-    "model_path = \"models/model\"\n",
-    "loss_path = \"models/loss\"\n",
     "\n",
     "from cell_dataset import CellGraphDataset, load\n",
     "from cell_model import GraphEvolution, GraphEvolutionDiscr\n",
@@ -111,23 +108,38 @@
     }
    ],
    "source": [
-    "load_all =  True#load directly from a pickle\n",
+    "load_all =  True #load directly from a pickle\n",
     "pre_separated = False #if three subfolders already exist for train test and val\n",
     "\n",
     "override = False #make this true to always use the same ones\n",
     "\n",
-    "data_train, data_test, data_val = load(load_all, pre_separated, override)"
+    "extension = \"_wrapped_v2\"\n",
+    "\n",
+    "model_path = \"models/model\" + extension + \"_\"\n",
+    "loss_path = \"models/loss\" + extension + \"_\"\n",
+    "\n",
+    "data_train, data_test, data_val = load(load_all, extension, pre_separated, override)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is data wrapped ?  True\n"
+     ]
+    }
+   ],
    "source": [
     "#INFO : if bg_load is True, this starts the loading, if skipped, bg_loading will take place as soon as a get is called\n",
     "rval, edge_index, edge_attr, batch_edge, border, params = data_train.get(0)\n",
-    "rval, edge_index, edge_attr, batch_edge, border, params = data_test.get(0)"
+    "rval, edge_index, edge_attr, batch_edge, border, params = data_test.get(0)\n",
+    "\n",
+    "print(\"Is data wrapped ? \", data_train.wrap)"
    ]
   },
   {
@@ -166,7 +178,7 @@
     "          data_train : CellGraphDataset, data_test : CellGraphDataset, device : torch.device, epoch : int, offset : int, grapher : GraphingLoss, save=0, save_datasets=True):\n",
     "    for e in range(offset, offset + epoch):\n",
     "        \n",
-    "        recursive = True\n",
+    "        recursive = e > 10\n",
     "\n",
     "        model = train(model, optimizer, scheduler, data_train, device, e, process, max_epoch=offset+epoch, recursive=recursive)\n",
     "\n",
@@ -175,19 +187,17 @@
     "        if(e == 0 and save_datasets) :\n",
     "            data_train.thread = None\n",
     "            data_test.thread = None\n",
-    "            with open(\"data/training.pkl\", 'wb') as f:\n",
+    "            with open(\"data/training\" + extension + \".pkl\", 'wb') as f:\n",
     "                pickle.dump(data_train, f)\n",
-    "            with open(\"data/testing.pkl\", 'wb') as f:\n",
+    "            with open(\"data/testing \" + extension + \".pkl\", 'wb') as f:\n",
     "                pickle.dump(data_test, f)\n",
     "            print(\"Saved datasets\")\n",
     "        \n",
     "\n",
-    "        test_loss_s = test_single(model, data_test, device, duration=8)\n",
-    "        test_loss_r = test_recursive(model, data_test, device, duration=8)\n",
+    "        test_loss_s = test_single(model, data_test, device, duration=16)\n",
+    "        test_loss_r = test_recursive(model, data_test, device, duration=16)\n",
     "\n",
     "        print(\"Epoch : \", e, \"Test loss : \", test_loss_s, \"Test loss recursive : \", test_loss_r)\n",
-    "\n",
-    "\n",
     "\n",
     "        grapher.losses.append(test_loss_r)\n",
     "        grapher.losses.append(test_loss_s)\n",
@@ -195,8 +205,8 @@
     "        grapher.plot_losses()\n",
     "        \n",
     "        if (e%10 == 0) :      \n",
-    "            all_params_out, all_params_true = compute_parameters(model, data_test, device, duration=8)\n",
-    "            grapher.plot_params(all_params_out, all_params_true, e)\n",
+    "            all_params_out, all_params_true = compute_parameters(model, data_test, device, duration=-1)\n",
+    "            grapher.plot_params(all_params_out, all_params_true, e, extension=extension)\n",
     "        \n",
     "        if (save and (e%save == 0 or e == epoch-1)) :\n",
     "            torch.save(model.state_dict(), model_path + str(e) + \".pt\")\n",
@@ -222,8 +232,8 @@
     "\n",
     "epoch_to_load = 10\n",
     "\n",
-    "#model = GraphEvolution(in_channels=14, out_channels=4, hidden_channels=32, dropout=0.01, edge_dim=2, messages=5, wrap=data_train.wrap)\n",
-    "model = GraphEvolution(in_channels=9, out_channels=4, hidden_channels=32, dropout=0.01, edge_dim=2, messages=5, wrap=True)\n",
+    "model = GraphEvolution(in_channels=14, out_channels=4, hidden_channels=32, dropout=0.05, edge_dim=2, messages=5, wrap=data_train.wrap)\n",
+    "#model = GraphEvolution(in_channels=9, out_channels=4, hidden_channels=32, dropout=0.01, edge_dim=2, messages=5, wrap=True)\n",
     "#model = GraphEvolutionDiscr(in_channels=9, out_channels=4, hidden_channels=16, dropout=0.01, edge_dim=2, messages=5, wrap=True)\n",
     "losses = []\n",
     "\n",
@@ -243,10 +253,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  2054\n",
+      "Using :  3660\n",
       "Losses :  11\n",
       "Model :  GraphEvolution(\n",
-      "  (encoder_resize): Linear(in_features=9, out_features=32, bias=True)\n",
+      "  (encoder_resize): Linear(in_features=14, out_features=32, bias=True)\n",
       "  (encoder_resize2): Linear(in_features=32, out_features=32, bias=True)\n",
       "  (transformer_encoder): TransformerEncoder(\n",
       "    (layers): ModuleList(\n",
@@ -255,24 +265,24 @@
       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
       "        )\n",
       "        (linear1): Linear(in_features=32, out_features=32, bias=True)\n",
-      "        (dropout): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout): Dropout(p=0.05, inplace=False)\n",
       "        (linear2): Linear(in_features=32, out_features=32, bias=True)\n",
       "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
-      "        (dropout1): Dropout(p=0.01, inplace=False)\n",
-      "        (dropout2): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout1): Dropout(p=0.05, inplace=False)\n",
+      "        (dropout2): Dropout(p=0.05, inplace=False)\n",
       "      )\n",
       "      (1): TransformerEncoderLayer(\n",
       "        (self_attn): MultiheadAttention(\n",
       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
       "        )\n",
       "        (linear1): Linear(in_features=32, out_features=32, bias=True)\n",
-      "        (dropout): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout): Dropout(p=0.05, inplace=False)\n",
       "        (linear2): Linear(in_features=32, out_features=32, bias=True)\n",
       "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
-      "        (dropout1): Dropout(p=0.01, inplace=False)\n",
-      "        (dropout2): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout1): Dropout(p=0.05, inplace=False)\n",
+      "        (dropout2): Dropout(p=0.05, inplace=False)\n",
       "      )\n",
       "    )\n",
       "  )\n",
@@ -295,14 +305,14 @@
       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
       "        )\n",
       "        (linear1): Linear(in_features=32, out_features=32, bias=True)\n",
-      "        (dropout): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout): Dropout(p=0.05, inplace=False)\n",
       "        (linear2): Linear(in_features=32, out_features=32, bias=True)\n",
       "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "        (norm3): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
-      "        (dropout1): Dropout(p=0.01, inplace=False)\n",
-      "        (dropout2): Dropout(p=0.01, inplace=False)\n",
-      "        (dropout3): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout1): Dropout(p=0.05, inplace=False)\n",
+      "        (dropout2): Dropout(p=0.05, inplace=False)\n",
+      "        (dropout3): Dropout(p=0.05, inplace=False)\n",
       "      )\n",
       "      (1): TransformerDecoderLayer(\n",
       "        (self_attn): MultiheadAttention(\n",
@@ -312,14 +322,14 @@
       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=32, out_features=32, bias=True)\n",
       "        )\n",
       "        (linear1): Linear(in_features=32, out_features=32, bias=True)\n",
-      "        (dropout): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout): Dropout(p=0.05, inplace=False)\n",
       "        (linear2): Linear(in_features=32, out_features=32, bias=True)\n",
       "        (norm1): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "        (norm2): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
       "        (norm3): LayerNorm((32,), eps=1e-05, elementwise_affine=True)\n",
-      "        (dropout1): Dropout(p=0.01, inplace=False)\n",
-      "        (dropout2): Dropout(p=0.01, inplace=False)\n",
-      "        (dropout3): Dropout(p=0.01, inplace=False)\n",
+      "        (dropout1): Dropout(p=0.05, inplace=False)\n",
+      "        (dropout2): Dropout(p=0.05, inplace=False)\n",
+      "        (dropout3): Dropout(p=0.05, inplace=False)\n",
       "      )\n",
       "    )\n",
       "  )\n",
@@ -342,7 +352,7 @@
    "outputs": [],
    "source": [
     "#might want to investigate AdamP \n",
-    "optimizer = AdamP(model.parameters(), lr=1e-3, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
+    "optimizer = AdamP(model.parameters(), lr=5e-5, betas=(0.9, 0.999), eps=1e-8, weight_decay=5e-3, delta=0.1, wd_ratio=0.1, nesterov=True)\n",
     "scheduler = CosineAnnealingWarmRestarts(optimizer=optimizer, T_0=10, T_mult=2, eta_min=1e-12)\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
@@ -354,9 +364,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 10\n",
+    "epochs = 30\n",
     "grapher = GraphingLoss(losses)\n",
     "scheduler.step(len(losses) // 2)\n",
+    "\n",
+    "model = model.to(device)\n",
+    "#data_train.to(device)\n",
+    "#data_test.to(device)\n",
     "\n",
     "#all_params_out, all_params_true = compute_parameters(model.to(device), data_test, device, duration=8)\n",
     "#grapher.plot_params(all_params_out, all_params_true, epoch_to_load)"
@@ -364,27 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch :  11 Test loss :  -4.05306984424591 Test loss recursive :  0.00012045118186506443\n",
-      "Epoch :  12 Test loss :  -4.137002840042114 Test loss recursive :  7.941144343931228e-05\n",
-      "Epoch :  13 Test loss :  -3.9911684799194336 Test loss recursive :  7.987875474100292e-06\n",
-      "Epoch :  14 Test loss :  -4.134133567810059 Test loss recursive :  7.03381255880231e-05\n",
-      "Epoch :  15 Test loss :  -4.147267928123474 Test loss recursive :  3.0121827767288777e-05\n",
-      "Epoch :  16 Test loss :  -4.128983693122864 Test loss recursive :  1.1522358090587658e-05\n",
-      "Epoch :  17 Test loss :  -3.3894046115875245 Test loss recursive :  8.865476302162278e-06\n",
-      "Epoch :  18 Test loss :  -3.9101170825958254 Test loss recursive :  0.0002600642156903632\n",
-      "Epoch :  19 Test loss :  -4.1473444032669065 Test loss recursive :  3.219815078409738e-05\n",
-      "Current probability of recursive training :  tensor(0.4881)\n",
-      "Epoch :  20 Test loss :  -4.167894458770752 Test loss recursive :  1.293590574277914e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start(model, optimizer, scheduler, data_train, data_test, device, \\\n",
     "        epochs, len(losses) // 2, grapher=grapher, save=10, save_datasets=False)"
