trying out training with only predictions, it still doesn't work

--- a/cell_tester.ipynb
+++ b/cell_tester.ipynb
@@ -35,7 +35,7 @@
     "from cell_dataset import load\n",
     "from cell_utils import  make_animation\n",
     "from cell_training import run_single, run_single_recursive\n",
-    "from cell_model import GraphEvolution\n",
+    "from cell_model import Gatv2Predictor, ConvPredictor\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "#INFO : if bg_load is True, this starts the loading, if skipped, bg_loading will take place as soon as a get is called\n",
-    "rval, edge_index, edge_attr, batch_edge, border, params = data_test.get(0)"
+    "rval, edge_index, edge_attr, border, params = data_test.get(0)"
    ]
   },
   {
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "model = GraphEvolution(in_channels=14, out_channels=4, hidden_channels=64, dropout=0.05, edge_dim=2, messages=10, wrap=data_train.wrap)\n",
+    "model = Gatv2Predictor(in_channels=16, out_channels=4, hidden_channels=64, dropout=0.05, edge_dim=2, messages=10, wrap=data_train.wrap)\n",
     "#model = GraphEvolution(in_channels=9, out_channels=4, hidden_channels=32, dropout=0.01, edge_dim=2, messages=5, wrap=True)\n",
     "if exists(model_path + \".pt\") :\n",
     "    with open(model_path + \".pt\", \"rb\") as f:\n",
