creating a script to group results together and polishing some graphs to have a consistent color code

--- a/cell_trainer.ipynb
+++ b/cell_trainer.ipynb
@@ -427,6 +427,35 @@
     "\n",
     "print(a.mean(dim=(0,1)).shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle as pkl\n",
+    "\n",
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "with open(\"random_file.pkl\", \"wb\") as f :\n",
+    "    pkl.dump(a, f)\n",
+    "    pkl.dump(b, f)\n",
+    "    \n",
+    "with open(\"random_file.pkl\", \"rb\") as f :\n",
+    "    print(pkl.load(f))\n",
+    "    print(pkl.load(f))"
+   ]
   }
  ],
  "metadata": {
