--- a/train_and_stats.ipynb
+++ b/train_and_stats.ipynb
@@ -9,18 +9,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using :  547\n",
+      "Using :  553\n",
       "Available :  43948\n",
       "True\n",
       "Cannot import zuko. Continuing without prior\n",
       "No module named 'pycapmd'\n",
       "Cannot import simulator\n",
-      "_open_ht_lv_4_512_laplace_8_h1\n",
-      "models/new_model/out_8_eps_-4/laplace/ht_lv/h1/model_open_ht_lv_4_512_laplace_8_h1\n",
+      "_open_ht_hv_2_256_laplace_8_h1\n",
+      "models/new_model/out_8_eps_-4/laplace/ht_hv/h1/model_open_ht_hv_2_256_laplace_8_h1\n",
+      "\n",
+      " VALIDATION MODE \n",
+      "\n",
       "\n",
       "Data loaded\n",
       "\n",
-      "Epoch :  0 Test loss recursive :  -1.8219085335731506usage : 6648 MB, loaded 900    \n",
+      "Loading model :  models/new_model/out_8_eps_-4/laplace/ht_hv/h1/model_open_ht_hv_2_256_laplace_8_h150.pt\n",
+      "Loaded model\n",
+      "\n",
+      "Finished training\n",
+      "\n",
+      "Done\n",
+      "_open_lt_hv_2_256_laplace_8_h1\n",
+      "models/new_model/out_8_eps_-4/laplace/lt_hv/h1/model_open_lt_hv_2_256_laplace_8_h1\n",
+      "\n",
+      " VALIDATION MODE \n",
+      "\n",
+      "\n",
+      "Data loaded\n",
+      "\n",
+      "Loading model :  models/new_model/out_8_eps_-4/laplace/lt_hv/h1/model_open_lt_hv_2_256_laplace_8_h150.pt\n",
+      "Loaded model\n",
+      "\n",
+      "Finished training\n",
+      "\n",
+      "Done\n",
+      "_open_lt_lv_2_256_laplace_8_h1\n",
+      "models/new_model/out_8_eps_-4/laplace/lt_lv/h1/model_open_lt_lv_2_256_laplace_8_h1\n",
+      "\n",
+      " VALIDATION MODE \n",
+      "\n",
+      "\n",
+      "Data loaded\n",
+      "\n",
+      "Loading model :  models/new_model/out_8_eps_-4/laplace/lt_lv/h1/model_open_lt_lv_2_256_laplace_8_h150.pt\n",
+      "Loaded model\n",
+      "\n",
+      "Finished training\n",
+      "\n",
+      "Done\n",
+      "_open_ht_lv_2_256_laplace_8_h1\n",
+      "models/new_model/out_8_eps_-4/laplace/ht_lv/h1/model_open_ht_lv_2_256_laplace_8_h1\n",
+      "\n",
+      " VALIDATION MODE \n",
+      "\n",
+      "\n",
+      "Data loaded\n",
+      "\n",
+      "Loading model :  models/new_model/out_8_eps_-4/laplace/ht_lv/h1/model_open_ht_lv_2_256_laplace_8_h150.pt\n",
+      "Loaded model\n",
       "\n",
       "Finished training\n",
       "\n",
@@ -36,10 +82,10 @@
     "pre_separated = False #if three subfolders already exist for train test and val\n",
     "override = False #make this true to always use the same ones\n",
     "\n",
-    "extensions = [\"_open_ht_lv\"]#[\"_open_ht_hv\", \"_open_lt_hv\", \"_open_lt_lv\", \"_open_ht_lv\"]\n",
-    "number_of_messages = [4]#[1,2,3,4]\n",
-    "size_of_messages = [512]#[64, 128]\n",
-    "epochs = 1\n",
+    "extensions = [\"_open_ht_hv\", \"_open_lt_hv\", \"_open_lt_lv\", \"_open_ht_lv\"]\n",
+    "number_of_messages = [2]#[1,2,3,4]\n",
+    "size_of_messages = [256]#[64, 128]\n",
+    "epochs = 0\n",
     "distribs = [\"laplace\"]#[\"laplace\", \"normal\"]\n",
     "outs = [8]#[4,8]\n",
     "horizon = 1\n",
@@ -49,7 +95,7 @@
     "        for size_of_message in size_of_messages:\n",
     "            for distrib in distribs:\n",
     "                for out in outs:\n",
-    "                    run(load_all, pre_separated, override, extension, number_of_message, size_of_message, epochs, distrib, out, horizon)"
+    "                    run(load_all, pre_separated, override, extension, number_of_message, size_of_message, epochs, distrib, out, horizon, validation=False)"
    ]
   }
  ],
